manifest/sonarqube/sonarqube.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-lts
  labels:
    app.kubernetes.io/name: sonarqube-lts
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: sonarqube-lts
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarqube-lts
  labels:
    app.kubernetes.io/name: sonarqube-lts
spec:
  replicas: 1
  serviceName: sonarqube-lts
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarqube-lts
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarqube-lts
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - worker-001
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                - sonarqube-lts
            topologyKey: "kubernetes.io/hostname"
      containers:
        - name: sonarqube-lts
          image: registry.cn-hangzhou.aliyuncs.com/devops-system/sonarqube:25.9.0.112764-community
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          resources:
            limits:
              cpu: 2
              memory: 4Gi
            requests:
              cpu: 1
              memory: 2Gi
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /api/system/status
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /api/system/status
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 6
          startupProbe:
            httpGet:
              scheme: HTTP
              path: /api/system/status
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 24
          securityContext:
            runAsUser: 1000
          volumeMounts:
            - mountPath: /opt/sonarqube/data
              name: sonarqube
              subPath: data
            - mountPath: /opt/sonarqube/extensions
              name: sonarqube
              subPath: extensions
            - mountPath: /opt/sonarqube/temp
              name: sonarqube
              subPath: temp
            - mountPath: /opt/sonarqube/logs
              name: sonarqube
              subPath: logs
            - mountPath: /tmp
              name: tmp-dir
      volumes:
      - name: init-sysctl
        configMap:
          name: sonarqube-lts-init-sysctl
          items:
            - key: init_sysctl.sh
              path: init_sysctl.sh
      - name: init-fs
        configMap:
          name: sonarqube-lts-init-fs
          items:
            - key: init_fs.sh
              path: init_fs.sh
      - name : tmp-dir
        emptyDir:
          {}
  volumeClaimTemplates:
  - metadata:
      name: sonarqube
    spec:
      storageClassName: sonarqube
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 100Gi
