manifest/sonarqube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: sonarqube-lts
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - sonar.kubeop.com
    secretName: kubeop.com-ssl
  rules:
  - host: sonar.kubeop.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: sonarqube-lts
              port:
                number: 9000
